--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -4,6 +4,7 @@
     position: relative;
     width: 80px;
     height: 80px;
+    margin-top: 30%;
 }
 
 .lds-spinner div {
@@ -20,7 +21,7 @@
     width: 6px;
     height: 18px;
     border-radius: 20%;
-    background: #fff;
+    background: rgb(245, 9, 9);
 }
 
 .lds-spinner div:nth-child(1) {
@@ -91,4 +92,11 @@
     100% {
         opacity: 0;
     }
+}
+
+.spinner {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    margin: auto auto;
 }
